feat: improve permission and user
